[package]
edition = "2021"
name = "gnss-share"
version = "1.3.3"
authors = [
    "Zeeshan Ali <zeenix@gmail.com>",
    "Dorota Czaplejewicz <dorota.czaplejewicz@puri.sm>",
    "Angus Ainslie <angus@akkea.ca>",
    "MagicWenli <yxnian@outlook.com>",
]
categories = ["hardware-support", "command-line-utilities", "command-line-interface", "os::unix-apis"]
keywords = ["serial", "hardware", "system", "RS232", "GPS"]
license = "GPL-2.0+"
readme = "README.md"
repository = "https://github.com/magicwenli/gnss-share"
description = "Utility to share your GPS device on local network"

[profile.release]
strip = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
libc = "0.2.155"
signal-hook = "0.3.17"
mio = { version = "0.8.11", features = ["net"] }
mio-serial = { git = 'https://github.com/larsch/mio-serial.git', branch = 'zero-block' }
log = "0.4.21"
env_logger = "0.11.3"
[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.5.0"
